force-app/main/default/objects/Contact/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>