force-app/main/default/objects/Contact/fields/Birthday_month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_month__c</fullName>
    <formula>TEXT(MONTH( Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday month</label>
    <type>Text</type>
</CustomField>