force-app/main/default/objects/Contact/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>finds total</description>
    <inlineHelpText>Enter number less than 1000</inlineHelpText>
    <label>Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>