force-app/main/default/objects/Contact/validationRules/Valid_Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Mobile_Number</fullName>
    <active>false</active>
    <description>Checks if the mobile number is of 10 digits</description>
    <errorConditionFormula>LEN( MobilePhone ) &gt; 10 || 
LEN( HomePhone ) &gt; 10 ||
LEN( Phone ) &gt; 10 ||
LEN( OtherPhone ) &gt; 10 ||
LEN( AssistantPhone ) &gt; 10</errorConditionFormula>
    <errorMessage>Phone number can not more than 10 digits</errorMessage>
</ValidationRule>